# StockAnalysis

./: .cursorrules  .gitignore  README.md  debug_page_source.html  detailed_plan_stockanalysis.txt  page_source.html  project-guidelines.md  project_development_workflow.md  project_summary.md  pyproject.toml  requirements.txt  run.py  setup.py  test_backend_api.py  test_backend_registry.py  test_endpoints.py
.cursor/rules/: ai-guidelines.mdc  aianalysis-data.mdc  api-contract-rule.mdc  api-documentation-rule.mdc  api-rules.mdc  create-rule-guidelines.mdc  database-validation.mdc  debugging-guidelines.mdc  error-handling-rule.mdc  integration-testing-rule.mdc  market-data.mdc  portfolio-data.mdc  quick-reference.mdc  scraper-data.mdc  scraper-rules.mdc  scraper-testing.mdc  stock-data.mdc  (+4 more)
db_backups/: detailed_financials_backup_20250301_175830.json  detailed_financials_backup_20250302_171457.json
logs/: MOTHERSON_page.html  table_37.html  table_40.html  table_42.html  table_43.html  table_46.html  table_48.html  table_51.html  table_55.html  table_59.html
src/: config.py  main.py
tests/: README.md  __init__.py  backup_database.py  clear_chromedriver_cache.py  debug_selectors.py  fix_db_format.py  project_tracker.py  reset_database.py  restore_database.py  run_scraper_tests.py  test_api.py  test_async_scraper.py  test_login.py  test_motherson_scraper.py  test_scraper.py  test_scraper_flow.py  test_scraper_single_card.py  validate_database.py
tools/: backup_database.py  check_database.py  fix_db_format.py  project_state.json  project_tracker.py  temp_restore.py
(+62 files in other folders)
