[project]
name = "stockanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "aiohttp==3.9.1",
    "bcrypt==3.2.2",
    "fastapi==0.109.2",
    "httpx==0.25.2",
    "motor==3.6.0",
    "pandas==2.1.3",
    "passlib==1.7.4",
    "pydantic-settings==2.1.0",
    "pydantic==2.7.2",
    "pymongo==4.9.2",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.6",
    "uvicorn==0.27.1",
]
